# XMemCheckAVR

./: CMakeLists.txt  README.md
src/: main.cpp
src/com/: usart.cpp  usart.hpp
src/util/: xmem.cpp  xmem.hpp
